--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import '../styles/global.scss';
 	<meta name="theme-color" content="#000000">
 	<title>{metadata.name} · {metadata.title}</title>
 
-	<!-- <link rel="icon" href="/favicon.ico" type="image/x-icon" /> -->
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.svg" type="image/svg+xml">
 	<link rel="apple-touch-icon" href="/apple-touch-icon.png">
 </head>
