style: increase size of monogram

--- a/src/components/Monogram.astro
+++ b/src/components/Monogram.astro
@@ -1,3 +1,10 @@
 ---
+const aspectRatio = 1 / 2.625
+const widthInRem = 3
 ---
-<img style="width: 2.625rem; height: 1rem;" src="/img/monogram.svg" alt="">
+  
+<img
+  style=`width: ${widthInRem}rem; height: ${widthInRem * aspectRatio}rem;`
+  src="/img/monogram.svg"
+  alt=""
+>
