--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import Monogram from '../components/Monogram.astro'
 import '../styles/global.scss';
 ---
 
-<html lang="en">
+<html lang="en" class="no-js">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
@@ -21,6 +21,31 @@ import '../styles/global.scss';
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="/favicon.svg" type="image/svg+xml">
 	<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+	<script>document.documentElement.className
+			= document.documentElement.className
+			.replace(/\bno-js\b/g, '') + ' js ';
+	</script>
+
+  <style>
+    /* @font-face {
+      font-family: 'Fraunces';
+      font-display: swap;
+      font-weight: 100 900;
+      src: url('/fonts/Fraunces--latin_basic.woff2') format('woff2');
+      unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+    } */
+
+    @font-face {
+      font-family: 'CabinetGrotesk';
+      font-display: swap;
+      font-weight: 100 900;
+      font-style: normal;
+      src: url('/fonts/CabinetGrotesk-Variable.woff2') format('woff2'),
+          url('/fonts/CabinetGrotesk-Variable.woff') format('woff'),
+          url('/fonts/CabinetGrotesk-Variable.ttf') format('truetype');
+      unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+    }
+  </style>
 </head>
 
 <body class="home">
@@ -30,11 +55,11 @@ import '../styles/global.scss';
 			<h2>{metadata.title}</h2>
 		</header>
 
-		<div class="bleed">
+		<div class="bleed video-fade-in">
 			<VimeoPlayer id={reel.vimeo_id} />
 		</div>
 
-		<div class="align-r" style="padding-top: 1rem;">
+		<div class="align-r scroller-fade-in" style="padding-top: 1rem;">
 			<ScrollButton targetId="about" />
 		</div>
 	</div>
