--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -26,7 +26,7 @@
   --margin-body-h: clamp(
     1rem,
     1rem + 2.125vw,
-    2.25rem
+    2.75rem
   );
   --margin-h-inset: var(--margin-body-h);
 
@@ -62,7 +62,7 @@ body {
   padding: 0 var(--margin-body-h) var(--margin-body-bottom);
   width: 100%;
   margin: 0 auto;
-  max-width: 36rem;
+  max-width: 64rem;
   min-height: 100vh;
 }
 
@@ -155,6 +155,12 @@ h3 {
   background-color: var(--color-bg);
 }
 
+.still {
+  display: block;
+  margin-bottom: 0.5em;
+  width: 100%;
+}
+
 .portrait {
   display: block;
   margin-bottom: 2em;
@@ -230,14 +236,14 @@ body.home {
     }
   }
 
-  article {
+  .section {
     padding-top: 2rem;
     padding-left: var(--margin-h-inset);
   }
 
   h3 {
     margin-left: calc(-1 * var(--margin-h-inset));
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
   }
 }
 
@@ -249,8 +255,9 @@ body.home {
   margin: 0.25rem 0 0;
   width: 100vw;
   min-width: 100%;
-  max-width: min(120vh, 72rem);
+  max-width: min(120vh, 96rem);
   align-self: center;
+  // background-color: gray;
 }
 
 .bleed-r {
