--- a/src/components/ProjectModal.astro
+++ b/src/components/ProjectModal.astro
@@ -1,33 +1,45 @@
 ---
 import BaseModal from './BaseModal.astro'
 import VimeoPlayer from './VimeoPlayer.astro';
+import { imagePath } from '../data/siteInfo'
 
 const { triggerId, project: {title, director, clips, stills } } = Astro.props
 ---
 
 <BaseModal {triggerId}>
-  <h3>{title}</h3>
-  {director && <h4>{director}</h4>}
+  <h3 tabindex="-1">{title}</h3>
+  {director && <h4>Director: {director}</h4>}
 
-  {clips && clips.map(clip => (
-    <div class="clip bleed">
-      <VimeoPlayer url={clip} />
-    </div>
-  ))}
+  {clips && 
+    <section class="clips bleed">
+      {clips.map(clip => (
+        <div class="clip">
+          <VimeoPlayer url={clip} />
+        </div>
+      ))}
+    </section>
+  }
+  
 
-  {stills && stills.map(still => (
-    <img src={still} alt="" loading="lazy"/>
-  ))}
+  {stills && 
+    <section class="stills">
+      {stills.map(still => (
+        <img src={imagePath + still} alt="" loading="lazy"/>
+      ))}
+    </section>
+  }
+  
 </BaseModal>
 
 <style lang="scss">
 body.home h3 {
+  // margin-top: 0;
   margin-left: 2rem;
-  position: sticky;
-  z-index: 10;
-  top: 1rem;
-  background-color: transparent;
-  mix-blend-mode: screen;
+  // position: sticky;
+  // z-index: 10;
+  // top: 1rem;
+  // background-color: transparent;
+  // mix-blend-mode: screen;
 }
 
 img {
@@ -37,5 +49,9 @@ img {
 
 .clip, img {
   margin-bottom: 6rem;
+}
+
+.clip iframe {
+  cursor: pointer;
 }
 </style>
