--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -50,6 +50,7 @@
 
 html {
   background-color: var(--color-bg);
+  -webkit-text-size-adjust: none;
 
   @media (prefers-reduced-motion: no-preference) {
     & {
@@ -62,7 +63,7 @@ body {
   padding: 0 var(--margin-body-h) var(--margin-body-bottom);
   width: 100%;
   margin: 0 auto;
-  max-width: 64rem;
+  max-width: 48rem;
   min-height: 100vh;
 }
 
