ui: add padding to bottom of modal

--- a/src/components/BaseModal.astro
+++ b/src/components/BaseModal.astro
@@ -92,7 +92,7 @@ const {
     modal.classList.add('show')
     body.classList.add('modal-is-active')
     modalTitle.focus()
-    
+
     document.addEventListener('keydown', trapFocus)
     document.addEventListener('keydown', closeOnEsc)
   }
@@ -184,6 +184,7 @@ const {
     transition: opacity 0.5s ease-in-out;
     overflow-y: scroll;
     // border: 6px solid purple;
+    padding-bottom: 6rem;
   }
 
   .modal__content {
