ui: improve modal header

--- a/src/components/BaseModal.astro
+++ b/src/components/BaseModal.astro
@@ -184,7 +184,7 @@ const {
     transition: opacity 0.5s ease-in-out;
     overflow-y: scroll;
     // border: 6px solid purple;
-    padding-bottom: 6rem;
+    padding: 3rem 0 6rem;
   }
 
   .modal__content {
