--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import ScrollButton from '../components/ScrollButton.astro'
 
 <Layout>
   <div class="initial-view">
-    <header>
+    <header class="landing">
       <h1>{metadata.name}</h1>
       <h2>{metadata.title}</h2>
     </header>
@@ -25,7 +25,7 @@ import ScrollButton from '../components/ScrollButton.astro'
     </div>
   </div>
 
-  <main>
+  <main class="landing">
     <ProjectSets />
     <AboutSection />
   </main>
