--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -14,8 +14,7 @@ import '../styles/global.scss';
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-  <script>document.documentElement.className
-    = document.documentElement.className
+  <script>document.documentElement.className = document.documentElement.className
       .replace(/\bno-js\b/g, '') + ' js ';
   </script>
 
