ui: make project modal close button bigger

--- a/src/components/BaseModal.astro
+++ b/src/components/BaseModal.astro
@@ -223,7 +223,7 @@ const {
     z-index: 100;
 
     button {
-      padding: 2rem;
+      padding: var(--margin-body-top);
       border: none;
       background-color: transparent;
       opacity: 0.5;
@@ -236,7 +236,7 @@ const {
       }
 
       img {
-        width: 2.75em;
+        width: 2.25rem;
       }
     }
   }
