--- a/src/components/ProjectModal.astro
+++ b/src/components/ProjectModal.astro
@@ -83,10 +83,10 @@ header {
 .still-thumbs {
   display: flex;
   flex-wrap: wrap;
-  gap: clamp(0.5rem, calc(2 * calc(0.125rem + 3vw)), 1.5rem);
+  gap: clamp(0.5rem, 4vw, 1.5rem);
 
   img {
-    width: calc(50% - clamp(0.25rem, calc(0.125rem + 2vw), 0.75rem));
+    width: calc(50% - clamp(0.25rem, 2vw, 0.75rem));
   }
 }
 
