feat: consolidate site data, make feature projectType label editable

--- a/src/components/ProjectModal.astro
+++ b/src/components/ProjectModal.astro
@@ -1,7 +1,7 @@
 ---
 import BaseModal from './BaseModal.astro'
 import VimeoPlayer from './VimeoPlayer.astro';
-import { imagePath } from '../data/siteInfo'
+import { imagePath } from '../settings/siteInfo'
 import Markdown from './Markdown.astro'
 
 const { triggerId, project: {title, director, clips, stills }, projectType } = Astro.props
