--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import { frontmatter as metadata } from '../data/Meta.md';
+import { frontmatter as metadata } from '../settings/Settings.md';
 import Monogram from '../components/Monogram.astro'
 import '../styles/global.scss';
 ---
